Tue Nov 22 23:52:06 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb: match incomplete (in current enconding) multibyte
	  string.  http://inamode6.tokuhirom.dnsalias.org/show/1551

Tue Nov 22 18:36:11 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* win32/win32.c (winnt_stat): set mapped errno instead of ENOENT.

Tue Nov 22 14:36:54 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_file_s_basename): skip slashes just after UNC top slashes.

	* test/ruby/test_path.rb (test_dirname, test_basename): follow new
	  spec. and add new tests.

Tue Nov 22 13:30:15 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* win32/win32.c (rb_w32_stat): Dir.chdir('//server/shared');
	  p Dir.glob('*') should work on WinNT. (implemented our own
	  stat(2) on WinNT) [ruby-list:41552] [ruby-dev:27711]

Tue Nov 22 02:31:53 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tkextlib/tile.rb: bug fix (Tk::Tile::USE_TTK_NAMESPACE
	  is not defined).

Tue Nov 22 01:45:21 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_basename): DOSISH_UNC is defined on cygwin but
	  DOSISH is not.  fixed: [ruby-dev:27797]

Mon Nov 21 22:50:48 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_path_skip_prefix, rb_file_s_basename): UNC without path
	  should not be splitted.  fixed: [ruby-dev:27776] [ruby-dev:27786]

	* parse.y (dsym): prohibit empty symbol literal by interpolation.
	  fixed: [ruby-talk:166529]

Mon Nov 21 16:03:48 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/setup.mk: findstr doesn't exist on win9x.
	  fixed: [ruby-dev:27756]

Sun Nov 20 21:39:27 2005  K.Kosako <sndgk393 AT ybb.ne.jp>

	* regparse.c (fetch_token_in_cc): tok->escaped should be
	  initialized.  [ruby-dev:27763]

Sun Nov 20 22:34:06 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_symname_p): [ not followed by ] is not valid symbol.
	  fixed: [ruby-talk:166520]

Sat Nov 19 19:57:54 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>
