@@ -1,3 +1,12 @@
+Wed Nov 23 01:22:57 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (test_identical): test if two files are identical.
+
+	* file.c (rb_f_test): support DOSISH systems where st_ino is not
+	  reliable.  fixed: [ruby-core:06672]
+
+	* win32.h, win32.c (rb_w32_osid): check the running platform.
+
 Tue Nov 22 23:52:06 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/optparse.rb: match incomplete (in current enconding) multibyte
